# rust-exercise

anagram/src/: lib.rs
armstrong-numbers/src/: lib.rs
backend/: Cargo.toml  TODO.md
backend/src/: app_state.rs  main.rs  pools.rs
binary-search/.exercism/: metadata.json
binary-search/src/: lib.rs
bottle-song/src/: lib.rs
difference-of-squares/src/: lib.rs
easy/armstrong-numbers/.exercism/: metadata.json
easy/bottle-song/.exercism/: metadata.json
easy/bottle-song/tests/: bottle_song.rs
easy/difference-of-squares/.exercism/: metadata.json
easy/gigasecond/.exercism/: metadata.json
easy/gigasecond/src/: lib.rs
easy/gigasecond/tests/: gigasecond.rs
easy/grains/.exercism/: metadata.json
easy/leap/: README.md
easy/leap/.exercism/: metadata.json
easy/nth-prime/src/: lib.rs
flower-field/src/: lib.rs
flower-field/tests/: flower_field.rs
gigasecond/: README.md
gigasecond/src/: lib.rs
grains/src/: lib.rs
hard/parallel-letter-frequency/: rustfmt.toml
hello-world/.exercism/: metadata.json
leap/src/: lib.rs
leap/tests/: leap.rs
luhn/.exercism/: metadata.json
luhn/src/: lib.rs
med/space-age/: README.md
nth-prime/: README.md
nth-prime/.exercism/: metadata.json
paasio/src/: lib.rs
parallel-letter-frequency/: Cargo.toml
parallel-letter-frequency/.exercism/: metadata.json
parallel-letter-frequency/src/: concurrency.rs  lib.rs
parallel-letter-frequency/tests/: parallel_letter_frequency.rs
reverse-string/.exercism/: metadata.json
space-age/src/: lib.rs
sublist/src/: lib.rs
sublist/tests/: sublist.rs
(+32 files in other folders)
